--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,18 @@
-init
+/* ubuntu-regular - latin_cyrillic-ext_cyrillic */
+@font-face {
+  font-family: 'Ubuntu';
+  font-style: normal;
+  font-weight: 400;
+  src: local("Ubuntu Regular"), local("Ubuntu-Regular"), url("../fonts/ubuntu-v10-latin_cyrillic-ext_cyrillic-regular.woff2") format("woff2"), url("../fonts/ubuntu-v10-latin_cyrillic-ext_cyrillic-regular.woff") format("woff");
+  /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */ }
+
+/* ubuntu-700 - latin_cyrillic-ext_cyrillic */
+@font-face {
+  font-family: 'Ubuntu';
+  font-style: normal;
+  font-weight: 700;
+  src: local("Ubuntu Bold"), local("Ubuntu-Bold"), url("../fonts/ubuntu-v10-latin_cyrillic-ext_cyrillic-700.woff2") format("woff2"), url("../fonts/ubuntu-v10-latin_cyrillic-ext_cyrillic-700.woff") format("woff");
+  /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */ }
+
+body {
+  font-family: "Ubuntu", Arial, sans-serif; }
