--- a/sass/global.scss
+++ b/sass/global.scss
@@ -20,4 +20,7 @@
 
 body {
   font-family: "Ubuntu", Arial, sans-serif;
+  // color: white;
+
+  // background-image: url("../img/background-02-resized.jpg");
 }
