Поэкспериментировал с подключением Bootstrap

--- a/sass/global.scss
+++ b/sass/global.scss
@@ -23,4 +23,5 @@ body {
   // color: white;
 
   // background-image: url("../img/background-02-resized.jpg");
+  // background-color: theme-color("primary");
 }
