--- a/sass/global.scss
+++ b/sass/global.scss
@@ -20,8 +20,6 @@
 
 body {
   font-family: "Ubuntu", Arial, sans-serif;
-  // color: white;
 
-  // background-image: url("../img/background-02-resized.jpg");
-  // background-color: theme-color("primary");
+  background-image: url("../img/vintage-concrete.png");
 }
