Add bg-image for body

--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@
 
 body {
   font-family: "Ubuntu", Arial, sans-serif;
-  background-image: url("../img/vintage-concrete.png"); }
+  background-image: url("../img/body_bg/vintage-concrete.png"); }
 
 .header__contacts {
   text-align: center;
