--- a/sass/global.scss
+++ b/sass/global.scss
@@ -21,5 +21,5 @@
 body {
   font-family: "Ubuntu", Arial, sans-serif;
 
-  background-image: url("../img/vintage-concrete.png");
+  background-image: url("../img/body_bg/vintage-concrete.png");
 }
