--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ body {
 .header__contacts {
   text-align: center;
   color: #fff;
-  background-image: url("../../img/title-left.png");
+  background-image: url("../img/title-left.png");
   background-position: center;
   background-size: contain;
   background-repeat: no-repeat; }
@@ -29,7 +29,7 @@ body {
 .header__about {
   text-align: center;
   color: #000;
-  background-image: url("../../img/title-right.png");
+  background-image: url("../img/title-right.png");
   background-position: center;
   background-size: contain;
   background-repeat: no-repeat; }
