--- a/sass/blocks/header.scss
+++ b/sass/blocks/header.scss
@@ -3,7 +3,7 @@
   &__contacts {
     text-align: center;
     color: #fff;
-    background-image: url("../../img/title-left.png");
+    background-image: url("../img/title-left.png");
     background-position: center;
     background-size: contain;
     background-repeat: no-repeat;
@@ -12,7 +12,7 @@
   &__about {
     text-align: center;
     color: #000;
-    background-image: url("../../img/title-right.png");
+    background-image: url("../img/title-right.png");
     background-position: center;
     background-size: contain;
     background-repeat: no-repeat;
