Выровнял header__contacts и header__about

--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,8 @@ body {
   background-position: center;
   background-size: contain;
   background-repeat: no-repeat; }
+  .header__contacts address {
+    vertical-align: middle; }
 
 .header__about {
   text-align: center;
