--- a/sass/blocks/header.scss
+++ b/sass/blocks/header.scss
@@ -7,6 +7,10 @@
     background-position: center;
     background-size: contain;
     background-repeat: no-repeat;
+
+    & address {
+      vertical-align: middle;
+    }
   }
 
   &__about {
