--- a/sass/global.scss
+++ b/sass/global.scss
@@ -22,4 +22,6 @@ body {
   font-family: "Ubuntu", Arial, sans-serif;
 
   background-image: url("../img/body_bg/vintage-concrete.png");
+  background-color: #E6DAC0;
+
 }
