--- a/sass/style.scss
+++ b/sass/style.scss
@@ -4,4 +4,6 @@
 @import "global.scss";
 
 @import "blocks/header.scss";
+@import "blocks/main-section.scss";
 @import "blocks/site-navigation.scss";
+
