--- a/pug/parts/header.pug
+++ b/pug/parts/header.pug
@@ -5,4 +5,52 @@ header.header
         adress
           abbr(title='Телефон')
             strong Тел.:
+          |
+          |
           br
+          | +79313483826
+          |
+          br
+          | +79213009822
+          |
+          br
+          |
+          |
+        adress
+          strong Адрес:
+          |
+          |
+          br
+          | Санкт-Петербург
+          |
+          br
+          | Октябрьская набережная д.50
+          |
+          br
+          |
+          |
+      .col-md
+        img.mx-auto.d-block(src='img/logo.png', alt='Pictor')
+      .col-md.d-flex.flex-column.justify-content-center.header__about
+        p
+          | Профессиональная покраска мдф, шпон, массив.
+          |
+          br
+          | Изготовление мдф фасадов.
+  .container-fluid.site-navigation.bg-dark
+    .container
+      nav.navbar.navbar-expand-md.navbar-dark.bg-dark
+        |
+        |
+        button.navbar-toggler(type='button', data-toggle='collapse', data-target='#navbarSupportedContent', aria-controls='navbarSupportedContent', aria-expanded='false', aria-label='Toggle navigation')
+          |
+          |
+          span.navbar-toggler-icon
+        .collapse.navbar-collapse#navbarSupportedContent
+          ul.navbar-nav.nav-pills.nav-justified.w-100
+            li.nav-item
+              a.nav-link(href='#')
+            li.nav-item
+              a.nav-link(href='#')
+            li.nav-item
+              a.nav-link(href='#')
