--- a/pug/layout.pug
+++ b/pug/layout.pug
@@ -3,3 +3,6 @@ html(lang='ru')
   include parts/head.pug
   body
     include parts/header.pug
+    block main-content
+    include parts/footer.pug
+    include parts/scripts.pug
