--- a/pug/parts/header.pug
+++ b/pug/parts/header.pug
@@ -43,14 +43,13 @@ header.header
         |
         |
         button.navbar-toggler(type='button', data-toggle='collapse', data-target='#navbarSupportedContent', aria-controls='navbarSupportedContent', aria-expanded='false', aria-label='Toggle navigation')
-          |
-          |
           span.navbar-toggler-icon
         .collapse.navbar-collapse#navbarSupportedContent
           ul.navbar-nav.nav-pills.nav-justified.w-100
-            li.nav-item
-              a.nav-link(href='#')
-            li.nav-item
-              a.nav-link(href='#')
-            li.nav-item
-              a.nav-link(href='#')
+            block works
+              li.nav-item
+                a.nav-link(href='#')
+              li.nav-item
+                a.nav-link(href='#')
+              li.nav-item
+                a.nav-link(href='#')
