пробую миксины в pug

--- a/pug/parts/header.pug
+++ b/pug/parts/header.pug
@@ -46,10 +46,4 @@ header.header
           span.navbar-toggler-icon
         .collapse.navbar-collapse#navbarSupportedContent
           ul.navbar-nav.nav-pills.nav-justified.w-100
-            block works
-              li.nav-item
-                a.nav-link(href='#')
-              li.nav-item
-                a.nav-link(href='#')
-              li.nav-item
-                a.nav-link(href='#')
+            block navs
