добавил about-us.html

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -3,6 +3,7 @@
 @import "mixins.scss";
 @import "global.scss";
 
+@import "blocks/about-us.scss";
 @import "blocks/header.scss";
 @import "blocks/main-section.scss";
 @import "blocks/site-navigation.scss";
