--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,9 @@ body {
   background-image: url("../img/body_bg/vintage-concrete.png");
   background-color: #E6DAC0; }
 
+.about-us {
+  background-color: rgba(255, 255, 255, 0.4); }
+
 .header__contacts {
   text-align: center;
   color: #fff;
