--- a/pug/parts/header.pug
+++ b/pug/parts/header.pug
@@ -38,7 +38,7 @@ header.header
           br
           | Изготовление мдф фасадов.
   .container-fluid.site-navigation.bg-dark
-    .container
+    .container.px-0
       nav.navbar.navbar-expand-md.navbar-dark.bg-dark
         |
         |
