поправил опечатку в теге address

--- a/pug/parts/footer.pug
+++ b/pug/parts/footer.pug
@@ -1,4 +1,4 @@
 footer.container-fluid.bg-dark
   .container.text-light.text-center
     p.mb-0 Профессиональная покраска мдф, шпон, массив. Изготовление мдф фасадов.
-    adress.mb-0 Адрес: Октябрьская набережная 50. Tел: +79313483826
+    address.mb-0 Адрес: Октябрьская набережная 50. Tел: +79313483826
