--- a/pug/parts/header.pug
+++ b/pug/parts/header.pug
@@ -2,7 +2,7 @@ header.header
   .container
     .row
       .col-md.d-flex.flex-column.justify-content-center.header__contacts
-        adress
+        address
           abbr(title='Телефон')
             strong Тел.:
           |
@@ -16,7 +16,7 @@ header.header
           br
           |
           |
-        adress
+        address
           strong Адрес:
           |
           |
