--- a/pug/parts/header.pug
+++ b/pug/parts/header.pug
@@ -5,32 +5,20 @@ header.header
         address
           abbr(title='Телефон')
             strong Тел.:
-          |
-          |
           br
           | +79313483826
-          |
           br
           | +79213009822
-          |
           br
-          |
-          |
         address
           strong Адрес:
-          |
-          |
           br
           | Санкт-Петербург
-          |
           br
           | Октябрьская набережная д.50
-          |
-          br
-          |
-          |
       .col-md
-        img.mx-auto.d-block(src='img/logo.png', alt='Pictor')
+        a(href='index.html')
+          img.mx-auto.d-block(src='img/logo.png', alt='Pictor')
       .col-md.d-flex.flex-column.justify-content-center.header__about
         p
           | Профессиональная покраска мдф, шпон, массив.
@@ -40,8 +28,6 @@ header.header
   .container-fluid.site-navigation.bg-dark
     .container.px-0
       nav.navbar.navbar-expand-md.navbar-dark.bg-dark
-        |
-        |
         button.navbar-toggler(type='button', data-toggle='collapse', data-target='#navbarSupportedContent', aria-controls='navbarSupportedContent', aria-expanded='false', aria-label='Toggle navigation')
           span.navbar-toggler-icon
         .collapse.navbar-collapse#navbarSupportedContent
