--- a/sass/style.scss
+++ b/sass/style.scss
@@ -5,6 +5,7 @@
 
 @import "blocks/bg-semitransparent.scss";
 @import "blocks/header.scss";
-@import "blocks/main-section.scss";
+@import "blocks/main-content-index.scss";
+@import "blocks/map-frame.scss";
 @import "blocks/site-navigation.scss";
 
