--- a/pug/parts/mc-contacts.pug
+++ b/pug/parts/mc-contacts.pug
@@ -1,7 +1,33 @@
 .container.bg-semitransparent.p-4
   .row
     .col-md-6
-      h4 Свяжитесь с нами
-
-    .col-md-6
-      iframe(src='https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2001.618484207559!2d30.44799431609497!3d59.88868298185804!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46962fb31c2ed849%3A0xf493a13a96a1ebb6!2z0J7QutGC0Y_QsdGA0YzRgdC60LDRjyDQvdCw0LEuLCA1MCwg0KHQsNC90LrRgi3Qn9C10YLQtdGA0LHRg9GA0LMsIDE5MzIzMA!5e0!3m2!1sru!2sru!4v1509030274183', width='100%', height='450', frameborder='0', style='border:0', allowfullscreen='', scrolling='off')
+      h1.h3.mb-4 Свяжитесь с нами
+      h2.h5.m-0 Покраска, изготовление, реставрация.
+      address.mb-3
+        | Почта:
+        a(href='mailto:mail@pictorspb.com')
+          |
+          | mail@pictorspb.com
+        br
+        | Октябрьская набережная, 50а
+      address.mb-4
+        address
+          abbr(title='Телефон')
+            strong Тел.:
+          br
+          | +79313483826
+          br
+          | +79213009822
+      form(action='#', method='post', name='feedback')
+        .form-group.mb-2
+          input.form-control.bg-dark.text-white#nameInput(type='text', name='name', placeholder='Имя', required)
+        .form-group.mb-2
+          input.form-control.bg-dark.text-white#emailInput(type='email', name='email', placeholder='Email', required)
+        .form-group.mb-2
+          input.form-control.bg-dark.text-white#headerInput(type='text', name='header', placeholder='Тема', required)
+        .form-group
+          textarea.form-control.bg-dark.text-white#messageArea(name='message', rows='5', style='min-height: 100px; max-height: 350px;', minlength='20', maxlength='200', placeholder='Ваше сообщение', required)
+        .form-group
+          button.btn.btn-primary(type='submit') Отправить
+    .col-md-6.map-frame
+      iframe(src='https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d16012.94786491774!2d30.434862222696214!3d59.88868299999999!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46962fb31c2ed849%3A0xf493a13a96a1ebb6!2z0J7QutGC0Y_QsdGA0YzRgdC60LDRjyDQvdCw0LEuLCA1MCwg0KHQsNC90LrRgi3Qn9C10YLQtdGA0LHRg9GA0LMsIDE5MzIzMA!5e0!3m2!1sru!2sru!4v1509043136092', width='100%', height='100%', frameborder='0', style='border:0', allowfullscreen='', scrolling='off')
