--- a/pug/parts/mc-index.pug
+++ b/pug/parts/mc-index.pug
@@ -1,17 +1,17 @@
 main.container
-  section.row.main-section
+  section.row.main-content-index
     .col-md-4.mb-5
-      h2.main-section__title.text-center.text-white.bg-dark.w-75.mx-auto.mb-4 Покраска
+      h2.main-content-index__title.text-center.text-white.bg-dark.w-75.mx-auto.mb-4 Покраска
       a.mb-5.d-block(href='painting.html')
         img.img-fluid.rounded.img-thumbnail.mx-auto.d-block(src='img/01.jpg', alt='Покраска')
       a.btn.btn-primary.d-block.mx-auto(href='painting.html') Узнать больше
     .col-md-4.mb-5
-      h2.main-section__title.text-center.text-white.bg-dark.w-75.mx-auto.mb-4 Изготовление
+      h2.main-content-index__title.text-center.text-white.bg-dark.w-75.mx-auto.mb-4 Изготовление
       a.mb-5.d-block(href='production.html')
         img.img-fluid.rounded.img-thumbnail.mx-auto.d-block(src='img/02.jpg', alt='Изготовление')
       a.btn.btn-primary.d-block.mx-auto(href='production.html') Узнать больше
     .col-md-4.mb-5
-      h2.main-section__title.text-center.text-white.bg-dark.w-75.mx-auto.mb-4 Реставрация
+      h2.main-content-index__title.text-center.text-white.bg-dark.w-75.mx-auto.mb-4 Реставрация
       a.mb-5.d-block(href='restoration.html')
         img.img-fluid.rounded.img-thumbnail.mx-auto.d-block(src='img/03.jpg', alt='Реставрация')
       a.btn.btn-primary.d-block.mx-auto(href='restoration.html') Узнать больше
