добавил верстку и контент для painting.html

--- a/pug/mixins/navs.pug
+++ b/pug/mixins/navs.pug
@@ -29,8 +29,8 @@ mixin navs(currNav)
           span.sr-only (текущая)
     default
       li.nav-item
-        a.nav-link(href='#') Главная
+        a.nav-link(href='index.html') Главная
       li.nav-item
-        a.nav-link(href='#') О нас
+        a.nav-link(href='about-us.html') О нас
       li.nav-item
-        a.nav-link(href='#') Контакты
+        a.nav-link(href='contacts.html') Контакты
