--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@
 
 body {
   font-family: "Ubuntu", Arial, sans-serif;
-  background-image: url("../img/body_bg/vintage-concrete.png");
+  background-image: url("../img/body_bg/retina_wood.png");
   background-color: #E6DAC0; }
 
 .bg-semitransparent {
@@ -57,3 +57,6 @@ body {
     padding: 0; }
   .site-navigation .nav-link {
     border-radius: 0; }
+  @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
+  body {
+    background-image: url("../img/body_bg/retina_wood_@2X.png"); } }
