--- a/pug/parts/mc-about-us.pug
+++ b/pug/parts/mc-about-us.pug
@@ -1,4 +1,4 @@
-.container.bg-semitransparent.p-4
+main.container.bg-semitransparent.p-4
   p.
     Компания Pictor предлагает производителям мебели услуги по профессиональной покраске и изготовлению мдф фасадов, окраске целиком изделий из мдф, шпона, декоративных элементов из массива и пенополиуретана, любого погонажа: карнизы, багет, профили мдф для рамочных фасадов и т.п.
   p.
