--- a/pug/parts/mc-painting.pug
+++ b/pug/parts/mc-painting.pug
@@ -1,4 +1,4 @@
-.container.bg-semitransparent.p-4
+main.container.bg-semitransparent.p-4
   p.
     Наш малярный цех предлагает широкий спектр услуг по профессиональной покраске столярных изделий,
     корпусной мебели и других деталей интерьера.
