--- a/pug/parts/mc-restoration.pug
+++ b/pug/parts/mc-restoration.pug
@@ -1,4 +1,4 @@
-.container.bg-semitransparent.p-4
+main.container.bg-semitransparent.p-4
   p.
     Реставрация — это хорошая возможность продлить жизнь любимому предмету интерьера, обновление дизайна и          красочный мебельный декор. Отреставрированная профессионалами мебель впоследствии может прослужить Вам несколько десятков лет.
   p.
