--- a/sass/global.scss
+++ b/sass/global.scss
@@ -25,8 +25,7 @@ body {
   background-color: #E6DAC0;
 }
 
-@media (-webkit-min-device-pixel-ratio: 2),
-(min-resolution: 192dpi) {
+  @media (-webkit-min-device-pixel-ratio: 1.5), (min-resolution: 144dpi) {
   body {
     background-image: url("../img/body_bg/retina_wood_@2X.png");
   }
