--- a/sass/style.scss
+++ b/sass/style.scss
@@ -6,6 +6,7 @@
 @import "blocks/bg-semitransparent.scss";
 @import "blocks/header.scss";
 @import "blocks/main-content-index.scss";
+@import "blocks/main-content-production.scss";
 @import "blocks/map-frame.scss";
 @import "blocks/site-navigation.scss";
 
