--- a/pug/parts/mc-index.pug
+++ b/pug/parts/mc-index.pug
@@ -1,5 +1,5 @@
 main.container
-  section.row.main-content-index
+  .row.main-content-index
     .col-md-4.mb-5
       h2.main-content-index__title.text-center.text-white.bg-dark.w-75.mx-auto.mb-4 Покраска
       a.mb-5.d-block(href='painting.html')
