--- a/pug/parts/header.pug
+++ b/pug/parts/header.pug
@@ -33,5 +33,5 @@ header.header.d-flex.flex-column.d-md-block
         button.navbar-toggler(type='button', data-toggle='collapse', data-target='#navbarSupportedContent', aria-controls='navbarSupportedContent', aria-expanded='false', aria-label='Toggle navigation')
           span.navbar-toggler-icon
         .collapse.navbar-collapse#navbarSupportedContent
-          ul.navbar-nav.nav-pills.nav-justified.w-100
+          ul.navbar-nav.nav-justified.w-100
             block navs
