--- a/sass/blocks/site-navigation.scss
+++ b/sass/blocks/site-navigation.scss
@@ -10,5 +10,12 @@
 
   & .nav-link {
     border-radius: 0;
+    transition-property: background-color;
+    transition-duration: 0.4s;
+    transition-timing-function: ease;
+
+    &:hover {
+      background-color: $pictor-blue;
+    }
   }
 }
