--- a/sass/global.scss
+++ b/sass/global.scss
@@ -22,7 +22,7 @@ body {
   font-family: "Ubuntu", Arial, sans-serif;
 
   background-image: url("../img/body_bg/retina_wood.png");
-  background-color: #E6DAC0;
+  background-color: #ead4b3;
 }
 
   @media (-webkit-min-device-pixel-ratio: 1.5), (min-resolution: 144dpi) {
