--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@
 body {
   font-family: "Ubuntu", Arial, sans-serif;
   background-image: url("../img/body_bg/retina_wood.png");
-  background-color: #E6DAC0; }
+  background-color: #ead4b3; }
 
 .bg-semitransparent {
   background-color: rgba(255, 255, 255, 0.4); }
@@ -40,8 +40,13 @@ body {
 
 .main-content-index {
   padding-top: 50px; }
+  .main-content-index .col-md-4 {
+    margin-bottom: 75px; }
   .main-content-index__title {
-    font-size: 21px; }
+    min-width: 180px;
+    max-width: 240px;
+    line-height: 1.4;
+    border-radius: .25rem; }
   .main-content-index .btn-primary {
     width: 140px; }
 
