--- a/pug/parts/header.pug
+++ b/pug/parts/header.pug
@@ -1,6 +1,6 @@
 header.header.d-flex.flex-column.d-md-block
   .container.order-2
-    .row
+    .row.header__top-row.no-gutters
       .col-md.d-none.d-md-flex.flex-column.justify-content-center.header__contacts
         address
           abbr(title='Телефон')
