Убрал картинки в хедере. Нужно будет заменить на более подходящие

--- a/sass/blocks/header.scss
+++ b/sass/blocks/header.scss
@@ -6,8 +6,8 @@
 
   &__contacts {
     text-align: center;
-    color: #fff;
-    background-image: url("../img/title-left.png");
+    // color: #fff;
+    // background-image: url("../img/title-left.png");
     background-position: center;
     background-size: contain;
     background-repeat: no-repeat;
@@ -15,8 +15,7 @@
 
   &__about {
     text-align: center;
-    color: #000;
-    background-image: url("../img/title-right.png");
+    // background-image: url("../img/title-right.png");
     background-position: center;
     background-size: contain;
     background-repeat: no-repeat;
