Перенёс цены на покраску в таблицу

--- a/pug/parts/mc-painting.pug
+++ b/pug/parts/mc-painting.pug
@@ -8,15 +8,42 @@ main.container.bg-semitransparent.p-4
   p.mb-4.
     Выполняем работу любой сложности в короткие сроки по доступным ценам!
     Для постоянных клиентов действует гибкая система скидок.
-  span Виды покрасочных работ и цены (цена покрытия за 1 кв.м.):
-  ul(type='disk')
-    li Матовое плоское от 2000 руб.
-    li Матовое с фрезеровкой от 2500 руб.
-    li Глянец плоский от 4500 руб.
-    li Матовое + патина от 3600 руб.
-    li Шпон под лак от 1500 руб.
-    li Шпон + тон матовый лак от 2200 руб.
-    li Шпон + тон высокий глянец от 4600 руб.
+  table.table.table-bordered.table-striped.bg-warning
+    caption Виды покрасочных работ и цены
+    thead
+      tr(scope='row')
+        th(scope='col') #
+        th(scope='col') Виды работ
+        th(scope='col') Цена от (рублей за квадратный метр)
+    tbody
+      tr(scope='row')
+        td 1
+        td Матовое плоское
+        td 2000 &#x20BD;
+      tr(scope='row')
+        td 2
+        td Матовое с фрезеровкой
+        td 2500 &#x20BD;
+      tr(scope='row')
+        td 3
+        td Глянец плоский
+        td 4500 &#x20BD;
+      tr(scope='row')
+        td 4
+        td Матовое + патина
+        td 3600 &#x20BD;
+      tr(scope='row')
+        td 5
+        td Шпон под лак
+        td 1500 &#x20BD;
+      tr(scope='row')
+        td 6
+        td Шпон + тон матовый лак
+        td 2200 &#x20BD;
+      tr(scope='row')
+        td 7
+        td Шпон + тон высокий глянец
+        td 4600 &#x20BD;
   a.btn.btn-primary.mb-4(href='https://yadi.sk/i/dqgiRV2y3Lqqor') Скачать прайс-лист
   p.
     Выполняем любые спецэффекты : Патина, Тонировка, Глянец Краколет, Декапе, Полировка, Перламутр, Мрамор, Металлический мрамор, Жемчуг, Металлик, Текстурный металлик, Паутинка, Старение. Также возможны различные сочетания спецэффектов (цена варьируется от сложности заказа).
