--- a/pug/parts/mc-production-mill.pug
+++ b/pug/parts/mc-production-mill.pug
@@ -22,10 +22,22 @@ main.container.bg-semitransparent.p-4
       Каждого порадует возможность обсудить детали изготовления фасадов и внести коррективы в форму и другие параметры мебельных деталей.
     li.
       Изготовление фрезерованных фасадов по вашему образцу или чертежу.
-  span Цена изготовления (за 1 кв.м.)
-  ul
-    li Матовые фасады - от 4000 руб.
-    li Глянцевые фасады - от 6000 руб.
+  table.table.table-bordered.table-striped.bg-warning
+    caption Цены на изготовление фрезерованных фасадов
+    thead
+      tr(scope='row')
+        th(scope='col') #
+        th(scope='col') Виды работ
+        th(scope='col') Цена от (рублей за квадратный метр)
+    tbody
+      tr(scope='row')
+        td 1
+        td Матовые фасады
+        td 4000 &#x20BD;
+      tr(scope='row')
+        td 2
+        td Глянцевые фасады
+        td 6000 &#x20BD;
   h2 Примеры фрезерованных фасадов:
   .row.mb-4
     .col-md-3.col-sm-6
