--- a/sass/style.scss
+++ b/sass/style.scss
@@ -9,4 +9,4 @@
 @import "blocks/main-content-production.scss";
 @import "blocks/map-frame.scss";
 @import "blocks/site-navigation.scss";
-
+@import "blocks/table.scss";
